# raytracer

./: .gitignore  CMakeLists.txt  README.md  antialiasing.ppm  diffuse_sphere.ppm  diffuse_sphere_shadow_acne.ppm  rays.ppm  sphere.ppm  sphere_normal.ppm  sphere_normal_hittable_camera_intervals.ppm
images/: defocus.ppm  dielectric.ppm  dielectric_hollow_glass_sphere.ppm  diffuse_sphere_lambertian.ppm  diffuse_sphere_lambertian_gamma.ppm  image.ppm  metal_spheres.ppm  metal_spheres_fuzzy.ppm  new_camera_angle.ppm  new_camera_angle_zoomed.ppm  order.txt  rays.ppm  wide_angle.ppm
inOneWeekend/: CMakeCache.txt
src/: camera.h  color.h  hittable.h  hittable_list.h  image_io.cpp  interval.h  main.cpp  material.h  metrics.h  ray.h  rtweekend.h  scene.cpp  scene.h  sphere.h  vec3.h  viewer.cpp
src/cuda/: cuda_render.h  render.cu
